cleaned up code, fixed text wrap issues, fixed delete task button bugs

--- a/src/app/task-list/task-list.component.scss
+++ b/src/app/task-list/task-list.component.scss
@@ -1,9 +1,5 @@
 @import "../../variables.scss";
 
-.task-container {
-    padding: $s-sm;
-}
-
 .tasklist {
     padding: 0 $s-sm;
 }
@@ -11,7 +7,7 @@
 .list-item {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     border: 1px solid $pink;
     border-radius: 5px;
@@ -21,25 +17,24 @@
 .list-item2 {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: space-between;
     border: 1px solid $turquoise;
     border-radius: 5px;
     background-color: $turquoise-tint;
 }
 
-.test {
+.taskitem-checkbox {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
-    
+
 li {
     font-size: $f-md;
     list-style-type: none;
     vertical-align: top;
     margin: $s-sm 0;
-    padding: 0 10px;
 }
 
 label {
@@ -58,25 +53,24 @@ label {
     color: $turquoise;
 }
 
-.checked:hover,
-.unchecked:hover {
-    cursor: pointer;
-}
-
-.ticked, .unticked {
+.unticked, .ticked {
     margin: $ls-xs $ls-sm;
 }
 
+.unticked:hover,
+.ticked:hover {
+    cursor: pointer;
+}
+
 .unticked:hover {
-    background-color: rgba(176, 32, 98, 0.2);
+    background-color: $pink-tint;
 }
 
 .ticked:hover {
     background-color: $turquoise-tint;
-    background: fill;
 }
 
-button {
+#remove-task {
     font-size: $f-xs;
 	background: none;
 	color: $pink;
@@ -87,6 +81,12 @@ button {
     outline: inherit;
 }
 
-button:hover {
-    background-color: rgba(176, 32, 98, 0.2);
+#remove-task:hover {
+    background-color: $pink-tint;
+}
+
+.delete-task {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
